fournos-ui/kustomize/overlays/ocp/patch-service-oauth.yaml
apiVersion: v1
kind: Service
metadata:
  name: fournos-dashboard
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: fournos-dashboard-tls
spec:
  ports:
    - name: https
      port: 8443
      targetPort: 8443
      protocol: TCP
