fournos-ui/kustomize/overlays/ocp/dashboard-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fournos-dashboard
  labels:
    app.kubernetes.io/name: fournos-dashboard
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-production
spec:
  # host is auto-generated by OpenShift from the Route name + namespace + cluster apps domain
  to:
    kind: Service
    name: fournos-dashboard
    weight: 100
  port:
    targetPort: https
  tls:
    termination: reencrypt
